--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -225,7 +225,7 @@ bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, B, exec, blueman-manager
 bind = $mainMod, M, exec, heidisql-wine
 bind = $mainMod, C, exec, code
-bind = $mainMod, I, exec, intellij-idea-community
+bind = $mainMod, I, exec, /opt/idea-IU-242.21829.142/bin/idea
 bind = $mainMod, O, exec, onlyoffice-desktopeditors
 bind = $mainMod, F, exec, firefox
 bind = $mainMod SHIFT, D, exec, discord 
